tests/parsing/smtlib/poly/errors/023_var_binding_unclosed_2.psmt2
(set-logic ALL)
(assert (let ((x 42 53)) (= x 2)))
