tests/parsing/smtlib/poly/errors/023_var_binding_unclosed_2.expected
File "tests/parsing/smtlib/poly/errors/023_var_binding_unclosed_2.psmt2", line 2, character 20-22:
Error while parsing a variable binding, read the integer '53',
      but expected a closing parenthesis.
